<!--
 Copyright © 2022 Olo Inc. All rights reserved.
 This software is made available under the Olo Pay SDK License (See LICENSE.md file)
 -->
<resources>
    <string name="app_name">Olo Pay SDK</string>
    <string name="card_form_settings_header">Card Form Settings</string>
    <string name="card_form_settings_display_form">Use Card Form</string>
    <string name="card_view_settings_header">Card View Settings</string>
    <string name="card_view_settings_display_card">Use Card View</string>
    <string name="card_view_settings_display_single_line_card">Use Single Line Card</string>
    <string name="card_view_settings_display_postal_code">Use Postal Code</string>
    <string name="card_view_settings_postal_code_required">Postal Code Required</string>
    <string name="card_view_settings_us_postal_code_required">US Postal Code Required</string>
    <string name="cvv_view_settings_header">CVV View Settings</string>
    <string name="cvv_view_settings_display_errors">Display CVV Errors</string>
    <string name="settings_log_input_changes">Log Input Changes</string>
    <string name="log_view_label">Output Log</string>
    <string name="focus_cvv_button">Focus CVV Field</string>
    <string name="clear_focus_button">Clear Focus</string>
    <string name="clear_log_button">Clear Log</string>
    <string name="clear_card_button">Clear Card</string>
    <string name="clear_card_focus">Clear Focus</string>
    <string name="clear_cvv_button">Clear CVV</string>
    <string name="clear_cvv_focus">Clear Focus</string>
    <string name="google_pay_settings_header">Google Pay Settings</string>
    <string name="google_pay_grandTotal_label">Total:</string>
    <string name="google_pay_subtotal_label">Subtotal:</string>
    <string name="google_pay_tax_label">Tax:</string>
    <string name="google_pay_tip_label">Tip:</string>
    <string name="submit_button">Submit</string>
    <string name="submit_google_pay">Google Pay</string>
    <string name="java_integration_button">Java</string>
    <string name="kotlin_integration_button">Kotlin</string>
    <string name="sdk_welcome">Android Olo Pay SDK Integration</string>
    <string name="sdk_instructions">Select which integration you would like to test by clicking the button below. If the SDK is uninitialized, this will initialize the SDK in the chosen language.\n\nNote that once initialized you will need to restart the app to test the initialization flow in another language</string>
    <string name="sdk_initialization_status_header">SDK Initialization Status</string>
    <string name="sdk_initialization_status_uninitialized">Uninitialized</string>
    <string name="sdk_initialization_status_initializing">Initializing...</string>
    <string name="sdk_initialization_status_initialized_java">Initialized via Java</string>
    <string name="sdk_initialization_status_initialized_kotlin">Initialized via Kotlin</string>
    <string name="done_button">Done</string>
    <string name="settings_button">Settings</string>
    <string name="restart_button">Restart</string>
    <string name="ordering_api_settings_header">Ordering API Settings</string>
    <string name="settings_complete_olopay_payment">Create Basket &amp; Complete Payments</string>
    <string name="settings_complete_olopay_payment_cvv_warning">(CVV Payment require logged in user)</string>
    <string name="settings_api_url">API URL</string>
    <string name="settings_api_key">API Key</string>
    <string name="settings_user_email">User Email</string>
    <string name="settings_user_password">User Password</string>
    <string name="settings_user_saved_card_billing_account">Saved Card Billing Account Id</string>
    <string name="settings_restaurant_id">Restaurant ID</string>
    <string name="settings_product_id">Product ID</string>
    <string name="settings_product_qty">Product Quantity</string>
    <string name="settings_google_pay_billing_scheme_id">Google Pay Billing Scheme ID</string>
    <string name="settings_google_pay_checkout_status_label">Use Pay Now Button</string>
    <string name="settings_google_pay_show_line_items_label">Show Line Items</string>
    <string name="settings_display_card_errors">Display Card Errors</string>
    <string name="submit_cvv_button">Submit CVV</string>
    <string name="user_settings_header">User Settings</string>
    <string name="user_settings_use_logged_in_user">Use Logged In User</string>
</resources>
