<?xml version="1.0" encoding="utf-8"?>
 <!--
 Copyright © 2022 Olo Inc. All rights reserved.
 This software is made available under the Olo Pay SDK License (See LICENSE.md file)
 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar" />
    <TextView
        android:id="@+id/sdk_welcome"
        android:text="@string/sdk_welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container"
        app:layout_constraintBottom_toTopOf="@+id/sdk_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.15"/>
    <TextView
        android:id="@id/sdk_instructions"
        android:text="@string/sdk_instructions"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        app:layout_constraintTop_toBottomOf="@id/sdk_welcome"
        app:layout_constraintBottom_toTopOf="@+id/java_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@id/java_button"
        android:text="@string/java_integration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sdk_instructions"
        app:layout_constraintBottom_toTopOf="@+id/sdk_initialization_status_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kotlin_button"
        app:layout_constraintHorizontal_chainStyle="spread"/>
    <Button
        android:id="@id/kotlin_button"
        android:text="@string/kotlin_integration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/java_button"
        app:layout_constraintStart_toEndOf="@+id/java_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@id/sdk_initialization_status_header"
        android:text="@string/sdk_initialization_status_header"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/java_button"
        app:layout_constraintBottom_toTopOf="@+id/sdk_initialization_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@id/sdk_initialization_status"
        android:text="@string/sdk_initialization_status_uninitialized"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sdk_initialization_status_header"
        app:layout_constraintBottom_toTopOf="@+id/restart_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@id/restart_button"
        android:text="Restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sdk_initialization_status"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>